[package]
name = "mars-program"
version = "1.0.0"
description = "Mars is a cryptocurrency for sovereign individuals living in Mirascape Horizon across the galaxy."
edition = "2021"
license = "Apache-2.0"
homepage = "https://miraland.io/mars"
documentation = "https://miraland.io/mars"
repository = "https://github.com/miraland-labs/mars"
readme = "./README.md"
keywords = ["solana", "crypto", "miraland", "mars", "pow"]

[lib]
crate-type = ["cdylib", "lib"]
name = "mars"

[features]
no-entrypoint = []
default = []

[dependencies]
bs58 = "0.5.0"
bytemuck = "1.14.3"
mpl-token-metadata = "4.1.2"
num_enum = "0.7.2"
shank = "0.3.0"
solana-program = "^1.16"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] } 
static_assertions = "1.1.0"
thiserror = "1.0.57"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dev-dependencies]
bs64 = "0.1.2"

[dev-dependencies]
rand = "0.8.5"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
tokio = { version = "1.35", features = ["full"] }
